# aoc2025

./: .gitignore  Cargo.toml
benches/: bench.rs
src/: lib.rs
