[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
criterion = "0.5"

[profile.release]
debug = true
lto = "thin"
panic = "abort"

[[bench]]
name = "bench"
harness = false

[dependencies]
mimalloc = { version = "*", default-features = false }
good_lp = { version = "*", features = ["scip", "scip_bundled"], default-features = false, optional = true }
regex = { version = "*", optional = true }

[features]
lp = ["good_lp"]
reg = ["regex"]

[[bin]]
name = "day10"
required-features = ["lp"]
